<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/save_and_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#EC7122"
            android:fontFamily="@font/mangatb"
            android:text="@string/save"
            android:textColor="#000000"
            android:soundEffectsEnabled="false"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/highscore"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/actual_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/actual_score"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nb_vies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/vies"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="97dp"
            android:columnCount="2"
            android:rowCount="2"

            >

            <ImageButton
                android:id="@+id/red_button"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/SalmonGameButtonRed"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:soundEffectsEnabled="false"
                android:src="@drawable/bouton_base_rouge"
                />

            <ImageButton
                android:id="@+id/green_button"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_gravity="start|center"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/SalmonGameButtonGreen"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:soundEffectsEnabled="false"
                android:src="@drawable/bouton_base_vert"
                />

            <ImageButton
                android:id="@+id/blue_button"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_gravity="start|center"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/SalmonGameButtonBlue"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:soundEffectsEnabled="false"
                android:src="@drawable/bouton_base_bleu"

                />

            <ImageButton
                android:id="@+id/yellow_button"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/SalmonGameButtonYellow"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:soundEffectsEnabled="false"
                android:src="@drawable/bouton_base_jaune"
                />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/niveauActuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mangatb"
            android:text="@string/niveau"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_gravity="center"
            />
    </LinearLayout>




</LinearLayout>